header fix for icon and title alignment

--- a/starter-kit/src/app/shell/header/header.component.scss
+++ b/starter-kit/src/app/shell/header/header.component.scss
@@ -7,3 +7,13 @@
 .nav-link.dropdown-toggle {
   cursor: pointer;
 }
+
+.nav-item {
+  span {
+    vertical-align: middle;
+  }
+
+  i {
+    margin-right: 8px;
+  }
+}
